
 *) Added --enable-reduced-depends to configure to request the minimal
    possible shared library dependencies be encoded at run-time.  This is
    for systems that properly implement transitive shared library
    dependencies, in order to minimize shared library conflicts introduced
    by SONAME changes and upgrades (mainly for Linux distribution
    packagers).

 *) Removed some Stanford-specific parts of doc/install-webkdc since we
    don't need instructions for what to do at Stanford any more.
    Clarified the documentation slightly.

 *) Removed the Doxygen configuration and makefile targets.  Failed
    experiment.

WebAuth 3.3.0 (2005-10-04)

 *) All WebKDC support for S/Ident removed.  The S/Ident protocol is
    inherently vulnerable to an active man-in-the-middle attack that is
    particularly severe for WebAuth, since S/Ident authentication is done
    by a single server and WebAuth users regularly visit that server.
    Exploiting this protocol flaw would allow an attacker to capture a
    single sign-on cookie and then impersonate the user to all WebAuth
    sites in that domain.

 *) Added WebAuthLdapSeparator to specify the separator for multivalued
    attributes.  When set in the server configuration, all values of a
    multivalued attribute are concatenated together, separated by that
    separator, and put into the base WEBAUTH_LDAP_* environment variable
    (rather than only the first one).

 *) Cleaned up, expanded, and improved the module documentation for
    mod_webauthldap.

 *) Added symbol versioning for libwebauth on Linux.  Symbol versioning
    is not supported on other platforms (at least yet).

 *) Updated tools/config.guess and tools/config.sub to the latest Debian
    versions.

 *) Update HACKING for the new Subversion repository and to reflect our
    change in practice regarding pre-release versions.

 *) Consolidate all the duplicate copies of util.pl in the mod_webauthldap
    test suite.
